mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_type_set_new.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: normalized
---
error: Undefined variable 'set'
--> test_scripts/error_cases/semantic_undefined_type_set_new.mux:2:18
   |
 2 | auto empty_set = set.new()
   |                  ^^^
   |
= help: Set has no '.new()' constructor. Use '{}' for an empty set or '{1, 2, 3}' for elements. For example: set<int> my_set = {}
